test/golden/Hello {piCL.{precision}}.9628757040831863475.golden

INITIALPATH:7:34: error:
    • Variable not found: precision
    • In the quasi-quotation: [fmt|Hello {pi:.{precision}}|]
  |
7 | main = putStrLn [fmt|Hello {pi:.{precision}}|]
  |                                  ^^^^^^^^^
